fixed form overflowing on mobile

--- a/src/styles/modules/formStyles.module.scss
+++ b/src/styles/modules/formStyles.module.scss
@@ -25,12 +25,23 @@
 			> label {
 				background: rgba($green, 0.5);
 				padding: 0.5em;
-				display: inline-block;
 				border-radius: 0.5em 0 0 0.5em;
 				min-width: 175px;
-				text-align: right;
 				border: 1px solid $black;
 				font-weight: 500;
+				display: flex;
+				justify-content: flex-end;
+
+				&:not([for='formMessage']) {
+					@include mobile {
+						align-items: center;
+					}
+				}
+
+				@include mobile {
+					min-width: 145px;
+					font-size: 0.875rem;
+				}
 			}
 
 			> input {
@@ -39,6 +50,7 @@
 				border-radius: 0 0.5em 0.5em 0;
 				border-left: none;
 				flex-grow: 1;
+				width: 100%;
 			}
 
 			> textarea {
@@ -51,6 +63,7 @@
 
 			> button {
 				@include button(2);
+
 				margin-left: auto;
 			}
 		}
